--- a/src/style.scss
+++ b/src/style.scss
@@ -23,7 +23,7 @@ $modifier: var(--background-modifier-accent);
     align-self: center;
   }
 
-  &-pagnation {
+  &-pagination {
     flex: 1 1 auto;
     > div > div {
       margin-top: 0;
